# open-banking-account-and-transaction-python-sdk

./: README.md  pyproject.toml  setup.py
.konfig/: generate-id.txt
open_banking_account_and_transaction_python_sdk/: __init__.py  api_client.py  client.pyi  client_custom.py  configuration.py  exceptions.py  operation_parameter_map.py  request_after_hook.py  request_before_hook.py  request_before_url_hook.py  rest.py  schemas.py  type_util.py  validation_metadata.py
open_banking_account_and_transaction_python_sdk/apis/: path_to_api.py  tag_to_api.py
open_banking_account_and_transaction_python_sdk/model/: __init__.py  account_id.py  account_id.pyi  active_or_historic_currency_code0.py  active_or_historic_currency_code0.pyi  active_or_historic_currency_code1.py  active_or_historic_currency_code1.pyi  address_line.py  address_line.pyi  beneficiary_id.py  beneficiary_id.pyi  booking_date_time.py  building_number.py  building_number.pyi  country_code.py  country_code.pyi  country_sub_division.py  country_sub_division.pyi  creation_date_time.pyi  date_time.pyi  debtor_reference.py  debtor_reference.pyi  description0.py  description0.pyi  description1.py  description1.pyi  description2.py  description2.pyi  description3.py  description3.pyi  direct_debit_id.py  direct_debit_id.pyi  email_address.py  email_address.pyi  end_date_time.pyi  final_payment_date_time.pyi  first_payment_date_time.pyi  frequency0.py  frequency0.pyi  frequency1.py  (+720 more)
open_banking_account_and_transaction_python_sdk/type/: links.py  (+429 more)
test/: test_check_url.py  test_deprecation_warning.py  test_simple.py
(+1216 files in other folders)
